tests/baselines/reference/declFileModuleAssignmentInObjectLiteralProperty.errors.txt
declFileModuleAssignmentInObjectLiteralProperty.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileModuleAssignmentInObjectLiteralProperty.ts (1 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class c {
        }
    }
    var d = {
        m1: { m: m1 },
        m2: { c: m1.c },
    };